Lager-Reporting implementiert

--- a/PP4/web/allgold/nav.xhtml
+++ b/PP4/web/allgold/nav.xhtml
@@ -7,10 +7,10 @@
         <strong>Allgold</strong>
         <ul>
             <li>
-                <h:link outcome="index" value="Home"/>
+                <h:link outcome="/index" value="Home"/>
             </li>
             <li>
-                <h:link outcome="index" value="Statistiken"/>
+                <h:link outcome="/allgold/lagerbestand" value="Lagerbestand"/>
             </li>
         </ul>
     </div>
