--- a/PP4/web/index.xhtml
+++ b/PP4/web/index.xhtml
@@ -10,7 +10,9 @@
             <h:outputText value="#{bundle.AllgoldSlogan}"></h:outputText>
         </ui:define>
         <ui:define name="content">
-            Pimmel
+            <div class="cowBackground">
+                
+            </div>
         </ui:define>
     </ui:composition>
 
