--- a/PP4/web/allgoldTemplate.xhtml
+++ b/PP4/web/allgoldTemplate.xhtml
@@ -12,7 +12,7 @@
 
     <h:body>
         <div id="main">
-            <div id="navbar" class="menubar">
+            <div id="navbar" class="menubar shadow">
                 <ui:insert name="navbar">
                     <ui:include id="nav" src="allgold/nav.xhtml"></ui:include>
                 </ui:insert>
